--- a/catalogue.html
+++ b/catalogue.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CATALOGUE</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <title>Catalogue</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
     <script src="./scripts.js"></script>
 </head>
 <body>
+    <nav class="navbar navbar-toggleable-md navbar-light bg-light" id="navbar">
+        <div class="container-fluid">
+            <a class="navbar-brand" id="logo" href="index.html">
+            <img src="./img/otterbadge.jpg" alt="" width="75" height="70" class="d-inline-block align-text-top" id="topotter">
+            tter site of the Web
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item active">
+                <a class="nav-link" aria-current="page" href="index.html">HOME</a>
+                </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    CATALOGUE
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                    <li><a class="dropdown-item" href="./catalogue.html#target1" target="_blank">Eurasian otter (Lutra lutra)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target2" target="_blank">Hairy-nosed otter (Lutra sumatrana)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target3" target="_blank">Spotted-necked otter (Hydrictus maculicollis)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target4" target="_blank">Smooth-coated otter (Lutrogale persipicillata)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target5" target="_blank">Bonus: Cuddly otter</a></li>
+                </ul>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="contact.html">CONTACT</a>
+                </li>
+            </ul>
+        </div>
+    </nav>  
+
+    <div class="spacing" style="background-color: #ccc; height: 2px;"></div>
+    <div class="spacing"></div>
+
+
     <h1>Catalotter</h1>
     <div>
         <h2><a id="target1">Eurasian otter (Lutra lutra)</a></h2>
@@ -59,5 +100,42 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia ab non, id aut impedit illum labore voluptatem ratione dolorum optio est numquam! Dignissimos soluta ullam quo reprehenderit natus magni consequuntur!
         </p>
     </div>
+
+    <div id="footer">
+        <div class="container">
+           <div class="spacing"></div>
+           <div class="row"></div>
+               <div class="col-3">
+                   <h1>
+                       <a href="./index.html">
+                           <img src="./img/otterbadge.jpg" width="118" height="118">
+                       </a>
+                   </h1>
+                   
+               </div>
+               <div class="col-6">
+                       <h4>Links</h4>
+                   <ul>
+                       <li>
+                           <a href="https://docs.inedo.com/docs/otter-reference-api" target="_blank">Otter API</a>
+                       </li>
+                       <li>
+                           <a href="https://www.doi.gov/blog/12-facts-about-otters-sea-otter-awareness-week" target="_blank">Otter cuteness check-list</a>
+                       </li>
+                       <li>
+                           <a href="https://en.wikipedia.org/wiki/Otter" target="_blank">Otter refferences</a>
+                       </li>
+                   </ul>       
+                   <div class='spacing'></div>
+                   <div class='spacing'></div>
+               </div>
+           </div>
+               <p>© 2021, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, veniam. Repudiandae,
+               earum iusto vero error fugit omnis iste impedit, delectus, eveniet doloremque culpa corrupti distinctio veritatis
+               corporis odit accusamus veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, minus. Nostrum saepe
+               </p>
+   </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </body>
 </html>
