--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                     CATALOGUE
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                    <li><a class="dropdown-item" href="./catalogue.html#target1">Eurasian otter (Lutra lutra)</a></li>
-                    <li><a class="dropdown-item" href="./catalogue.html#target2">Hairy-nosed otter (Lutra sumatrana)</a></li>
-                    <li><a class="dropdown-item" href="./catalogue.html#target3">Spotted-necked otter (Hydrictus maculicollis)</a></li>
-                    <li><a class="dropdown-item" href="./catalogue.html#target4">Smooth-coated otter (Lutrogale persipicillata)</a></li>
-                    <li><a class="dropdown-item" href="./catalogue.html#target5">Bonus: Cuddly otter</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target1" target="_blank">Eurasian otter (Lutra lutra)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target2" target="_blank">Hairy-nosed otter (Lutra sumatrana)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target3" target="_blank">Spotted-necked otter (Hydrictus maculicollis)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target4" target="_blank">Smooth-coated otter (Lutrogale persipicillata)</a></li>
+                    <li><a class="dropdown-item" href="./catalogue.html#target5" target="_blank">Bonus: Cuddly otter</a></li>
                 </ul>
                 </li>
                 <li class="nav-item">
@@ -95,13 +95,22 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsu
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsu
         </p>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsu
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsum 
         </p>
         <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsu
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic adipisci at numquam velit praesentium deserunt odio. Qui maiores illum, consequatur earum temporibus sed eum voluptatum optio, laboriosam quidem, fuga quo!Loremlorem
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque autem, quis vel sit sed, inventore quisquam non dolorum harum quo saepe veniam eaque eligendi? Totam mollitia nihil sequi omnis cumque!Loremloremlore
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, assumenda! Eveniet optio expedita quisquam recusandae enim reprehenderit provident corrupti earum, a, ex id beatae! Quod quibusdam labore rem hic! Soluta. Lorem ipsum 
@@ -112,42 +121,39 @@
      <div class="spacing"></div>
 
      <div id="footer">
-         <div class="spacing"></div>
-         <div class="row"></div>
-            <div class="col-sm">
-                <h1>
-                    <a href="./index.html">
-                        <img src="./img/otterbadge.jpg">
-                    </a>
-                </h1>
-                
-            </div>
-            <div class="col-sm">
-                <div class="links">
-                    <h4>Links</h4>
-                <ul>
-                    <li>
-                        <a href="https://docs.inedo.com/docs/otter-reference-api" target="_blank">Otter API</a>
-                    </li>
-                    <li>
-                        <a href="https://www.doi.gov/blog/12-facts-about-otters-sea-otter-awareness-week" target="_blank">Otter cuteness check-list</a>
-                    </li>
-                    <li>
-                        <a href="https://en.wikipedia.org/wiki/Otter" target="_blank">Otter refferences</a>
-                    </li>
-                </ul>    
-                <div class='spacing'></div>
-                  <div class='spacing'></div>
+         <div class="container">
+            <div class="spacing"></div>
+            <div class="row"></div>
+                <div class="col-3">
+                    <h1>
+                        <a href="./index.html">
+                            <img src="./img/otterbadge.jpg" width="118" height="118">
+                        </a>
+                    </h1>
+                    
+                </div>
+                <div class="col-6">
+                        <h4>Links</h4>
+                    <ul>
+                        <li>
+                            <a href="https://docs.inedo.com/docs/otter-reference-api" target="_blank">Otter API</a>
+                        </li>
+                        <li>
+                            <a href="https://www.doi.gov/blog/12-facts-about-otters-sea-otter-awareness-week" target="_blank">Otter cuteness check-list</a>
+                        </li>
+                        <li>
+                            <a href="https://en.wikipedia.org/wiki/Otter" target="_blank">Otter refferences</a>
+                        </li>
+                    </ul>       
+                    <div class='spacing'></div>
+                    <div class='spacing'></div>
                 </div>
             </div>
-            <div class='creativecommons'>
-                <p>© 2021, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, veniam. Repudiandae,<br>
-                  earum iusto vero error fugit omnis iste impedit, delectus, eveniet doloremque culpa corrupti distinctio veritatis <br>
-                  corporis odit accusamus veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, minus. Nostrum saepe <br>
+                <p>© 2021, Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, veniam. Repudiandae,
+                earum iusto vero error fugit omnis iste impedit, delectus, eveniet doloremque culpa corrupti distinctio veritatis
+                corporis odit accusamus veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, minus. Nostrum saepe
                 </p>
-              </div>
-              <div class='spacing'></div>
-     </div>
+    </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
      <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </body>
